// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/terraform-provider/index getReleases processes data with alternative backend 1`] = `
Object {
  "registryUrl": "https://releases.hashicorp.com",
  "releases": Array [
    Object {
      "version": "1.19.0",
    },
    Object {
      "version": "1.20.0",
    },
    Object {
      "version": "2.0.0",
    },
  ],
  "sourceUrl": "https://github.com/terraform-providers/terraform-provider-google-beta",
}
`;

exports[`datasource/terraform-provider/index getReleases processes data with alternative backend 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/google-beta",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases processes real data 1`] = `
Object {
  "homepage": "https://registry.terraform.io/providers/hashicorp/azurerm",
  "registryUrl": "https://registry.terraform.io",
  "releases": Array [
    Object {
      "version": "0.1.0",
    },
    Object {
      "version": "0.1.1",
    },
    Object {
      "version": "0.1.2",
    },
    Object {
      "version": "0.1.3",
    },
    Object {
      "version": "0.1.4",
    },
    Object {
      "version": "0.1.5",
    },
    Object {
      "version": "0.1.6",
    },
    Object {
      "version": "0.1.7",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.1",
    },
    Object {
      "version": "0.2.2",
    },
    Object {
      "version": "0.3.0",
    },
    Object {
      "version": "0.3.1",
    },
    Object {
      "version": "0.3.2",
    },
    Object {
      "version": "0.3.3",
    },
    Object {
      "version": "1.0.0",
    },
    Object {
      "version": "1.0.1",
    },
    Object {
      "version": "1.1.0",
    },
    Object {
      "version": "1.1.1",
    },
    Object {
      "version": "1.1.2",
    },
    Object {
      "version": "1.2.0",
    },
    Object {
      "version": "1.3.0",
    },
    Object {
      "version": "1.3.1",
    },
    Object {
      "version": "1.3.2",
    },
    Object {
      "version": "1.3.3",
    },
    Object {
      "version": "1.4.0",
    },
    Object {
      "version": "1.5.0",
    },
    Object {
      "version": "1.6.0",
    },
    Object {
      "version": "1.7.0",
    },
    Object {
      "version": "1.8.0",
    },
    Object {
      "version": "1.9.0",
    },
    Object {
      "version": "1.10.0",
    },
    Object {
      "version": "1.11.0",
    },
    Object {
      "version": "1.12.0",
    },
    Object {
      "version": "1.13.0",
    },
    Object {
      "version": "1.14.0",
    },
    Object {
      "version": "1.15.0",
    },
    Object {
      "version": "1.16.0",
    },
    Object {
      "version": "1.17.0",
    },
    Object {
      "version": "1.18.0",
    },
    Object {
      "version": "1.19.0",
    },
    Object {
      "version": "1.20.0",
    },
    Object {
      "version": "1.21.0",
    },
    Object {
      "version": "1.22.0",
    },
    Object {
      "version": "1.22.1",
    },
    Object {
      "version": "1.23.0",
    },
    Object {
      "version": "1.24.0",
    },
    Object {
      "version": "1.25.0",
    },
    Object {
      "version": "1.26.0",
    },
    Object {
      "version": "1.27.0",
    },
    Object {
      "version": "1.27.1",
    },
    Object {
      "version": "1.28.0",
    },
    Object {
      "version": "1.29.0",
    },
    Object {
      "version": "1.30.0",
    },
    Object {
      "version": "1.30.1",
    },
    Object {
      "version": "1.31.0",
    },
    Object {
      "version": "1.32.0",
    },
    Object {
      "version": "1.32.1",
    },
    Object {
      "version": "1.33.0",
    },
    Object {
      "version": "1.33.1",
    },
    Object {
      "version": "1.34.0",
    },
    Object {
      "version": "1.35.0",
    },
    Object {
      "version": "1.36.0",
    },
    Object {
      "version": "1.36.1",
    },
    Object {
      "releaseTimestamp": "2019-11-26T08:22:56.000Z",
      "version": "1.37.0",
    },
  ],
  "sourceUrl": "https://github.com/terraform-providers/terraform-provider-azurerm",
}
`;

exports[`datasource/terraform-provider/index getReleases processes real data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/azurerm",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases processes real data from lookupName 1`] = `
Object {
  "homepage": "https://registry.company.com/providers/hashicorp/azurerm",
  "registryUrl": "https://registry.company.com",
  "releases": Array [
    Object {
      "version": "0.1.0",
    },
    Object {
      "version": "0.1.1",
    },
    Object {
      "version": "0.1.2",
    },
    Object {
      "version": "0.1.3",
    },
    Object {
      "version": "0.1.4",
    },
    Object {
      "version": "0.1.5",
    },
    Object {
      "version": "0.1.6",
    },
    Object {
      "version": "0.1.7",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.1",
    },
    Object {
      "version": "0.2.2",
    },
    Object {
      "version": "0.3.0",
    },
    Object {
      "version": "0.3.1",
    },
    Object {
      "version": "0.3.2",
    },
    Object {
      "version": "0.3.3",
    },
    Object {
      "version": "1.0.0",
    },
    Object {
      "version": "1.0.1",
    },
    Object {
      "version": "1.1.0",
    },
    Object {
      "version": "1.1.1",
    },
    Object {
      "version": "1.1.2",
    },
    Object {
      "version": "1.2.0",
    },
    Object {
      "version": "1.3.0",
    },
    Object {
      "version": "1.3.1",
    },
    Object {
      "version": "1.3.2",
    },
    Object {
      "version": "1.3.3",
    },
    Object {
      "version": "1.4.0",
    },
    Object {
      "version": "1.5.0",
    },
    Object {
      "version": "1.6.0",
    },
    Object {
      "version": "1.7.0",
    },
    Object {
      "version": "1.8.0",
    },
    Object {
      "version": "1.9.0",
    },
    Object {
      "version": "1.10.0",
    },
    Object {
      "version": "1.11.0",
    },
    Object {
      "version": "1.12.0",
    },
    Object {
      "version": "1.13.0",
    },
    Object {
      "version": "1.14.0",
    },
    Object {
      "version": "1.15.0",
    },
    Object {
      "version": "1.16.0",
    },
    Object {
      "version": "1.17.0",
    },
    Object {
      "version": "1.18.0",
    },
    Object {
      "version": "1.19.0",
    },
    Object {
      "version": "1.20.0",
    },
    Object {
      "version": "1.21.0",
    },
    Object {
      "version": "1.22.0",
    },
    Object {
      "version": "1.22.1",
    },
    Object {
      "version": "1.23.0",
    },
    Object {
      "version": "1.24.0",
    },
    Object {
      "version": "1.25.0",
    },
    Object {
      "version": "1.26.0",
    },
    Object {
      "version": "1.27.0",
    },
    Object {
      "version": "1.27.1",
    },
    Object {
      "version": "1.28.0",
    },
    Object {
      "version": "1.29.0",
    },
    Object {
      "version": "1.30.0",
    },
    Object {
      "version": "1.30.1",
    },
    Object {
      "version": "1.31.0",
    },
    Object {
      "version": "1.32.0",
    },
    Object {
      "version": "1.32.1",
    },
    Object {
      "version": "1.33.0",
    },
    Object {
      "version": "1.33.1",
    },
    Object {
      "version": "1.34.0",
    },
    Object {
      "version": "1.35.0",
    },
    Object {
      "version": "1.36.0",
    },
    Object {
      "version": "1.36.1",
    },
    Object {
      "releaseTimestamp": "2019-11-26T08:22:56.000Z",
      "version": "1.37.0",
    },
  ],
  "sourceUrl": "https://github.com/terraform-providers/terraform-provider-azurerm",
}
`;

exports[`datasource/terraform-provider/index getReleases processes real data from lookupName 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.company.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.company.com/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.company.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.company.com/v1/providers/hashicorp/azurerm",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases returns null for 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/azurerm",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases returns null for empty result 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/azurerm",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases returns null for error in service discovery 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases returns null for unknown error 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/azurerm",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases simulate failing secondary release source 1`] = `null`;
